# tree-sitter-plsqloracle

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build-constants.js  go.mod  grammar-constants.d.ts  grammar-constants.js  grammar-constants.ts  grammar.js  grammar_builtins.js  grammar_keywords.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-plsqloracle.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_plsqloracle/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPlSqlOracle/: plsqloracle.h
bindings/swift/TreeSitterPlSqlOracleTests/: TreeSitterPlSqlOracleTests.swift
grammar/: directive.cjs  expression.cjs  keyword.cjs  operator.cjs  punctuation.cjs
grammar/utils/: index.cjs
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  scanner.c
